2019-1/220/users/3714/executions/1572_2896.log
== TEST (2019-03-12 21:45:57) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = imput("digite o nome:")

# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = imput("digite o nome:")
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:46:08) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome:")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:46:11) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome:")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.212734
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
